Refactor MaskMCPHandlerProvider and EncryptMCPHandlerProvider